--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Ravvers/youtube-testing/issues"
   },
-  "homepage": "https://github.com/Ravvers/youtube-testing#readme"
+  "homepage": "https://github.com/Ravvers/youtube-testing#readme",
+  "dependencies": {
+    "jest": "^26.6.3",
+    "puppeteer": "^5.5.0"
+  }
 }
